2_service_int.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-int
  labels:
    app: testapp
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: testapp
