3_service_np.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
spec:
  type: NodePort
  selector:
    app: testapp
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
